[add] .gitignore, first end2end test finished